third_party/WebKit/Source/WebCore/platform/graphics/ca/mac/WebTileCacheLayer.mm
@@ -43,7 +43,9 @@ using namespace WebCore;
 
     // FIXME: The tile size should be configurable.
     _tileCache = TileCache::create(self, IntSize(512, 512));
-
+#ifndef NDEBUG
+    [self setName:@"WebTileCacheLayer"];
+#endif
     return self;
 }
 
